--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <title>Zerodha</title>
   </head>
   <br>
-    <div>
+    <div style="display: flex;justify-content: space-between;margin-left: 100px;margin-right: 100px;">
       <img src="/logo.svg" alt="Zerodha logo" width="150px" />
-      <span>Signup</span>
-      <span>About</span> 
-      <span>Products</span>
-      <span>Pricing</span>
-      <span>Support</span>
+      <div style="display: flex;gap: 10px;">
+       <div>Signup</div>
+       <div>Products</div>
+       <div>Pricing</div>
+       <div>Support</div>
+     </div>
     </div>
     <br></br>
     <br></br>
