--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&display=swap" rel="stylesheet">
     <title>Zerodha</title>
   </head>
-  <br>
-    <div style="display: flex;justify-content: space-between;margin-left: 100px;margin-right: 100px;">
-      <img src="/logo.svg" alt="Zerodha logo" width="150px" />
-      <div style="display: flex;gap: 10px;">
-       <div>Signup</div>
-       <div>Products</div>
-       <div>Pricing</div>
-       <div>Support</div>
+  <body>
+    <div style="display: flex;justify-content: space-between;padding-left: 100px;padding-right: 100px;background-color: #fff;box-shadow: 2px 1px 2px #eee">
+      <img src="/logo.svg" alt="Zerodha logo" width="120 "height="20px" style="padding-top: 20px;cursor: pointer;"/>
+      <div style="display: flex;font-family: inter;font-size: 14.4px;color: #444444;">
+       <div style="color: #666;padding: 20px;cursor: pointer;" onmouseover= "this.style.color = 'blue'"onmouseout= "this.style.color = '#666'" >Signup</div>
+       <div style="color: #666;padding: 20px;cursor: pointer;"  onmouseover= "this.style.color = 'blue'"onmouseout= "this.style.color = '#666'">About</div>
+       <div style="color: #666;padding: 20px;cursor: pointer;"  onmouseover= "this.style.color = 'blue'"onmouseout= "this.style.color = '#666'">Product</div>
+       <div style="color: #666;padding: 20px;cursor: pointer;"  onmouseover= "this.style.color = 'blue'"onmouseout= "this.style.color = '#666'">Pricing</div>
+       <div style="color: #666;padding: 20px;cursor: pointer;"  onmouseover= "this.style.color = 'blue'"onmouseout= "this.style.color = '#666'">Support</div>
      </div>
     </div>
-    <br></br>
-    <br></br>
-    <br></br>
-    <br></br>
-    <div>
+  </body>
+   
+    <div style="display: flex;justify-content: center;padding-top: 40px;">
       <img src="landing.png" alt="Zerodha Image" width="100%" />
-    <br></br>
-    <br></br>
-    <br></br>
-    <center>
-      <h1>Invest in everything</h1>
-      <h3>
+  </div>
+  <div style="text-align: center;">
+    <div style="display: flex;justify-content: center;">
+      <h1 style=" font-weight: 500;font-size: 44px;font-family: inter;color: #424242;">Invest in everything</h1>
+    </div>
+    <div style="display: flex;justify-content: center;font-size: 20px;font-family: inter;color: #424242;">
+      <h3 style="font-weight: 400;">
         Online platform to invest in stocks,derivatives,mutual funds, and more
       </h3>
-      <button>Sign up now</button>
-    </center>
     </div>
+    <div style="display: flex;justify-content: center;">
+      <div style="cursor: pointer;background-color:#387ED1 ;border: 0;padding-block: 10px;padding-inline: 30px;font-size: 19.2px;color: #FFFFFF;font-family: inter;border-radius:3px;"onmouseover ="this.style.backgroundColor ='#424242'"onmouseout ="this.style.backgroundColor ='#387ED1'">Sign up now</div>
+    </div>
+  </div>
+   
   </body>
 </html>
